# Steelers-Stats-2025

./: .env.save  README.md  collector.py  llm.py  loaderscript.py  main.py  modal_test.py  pyproject.toml  steelers_stats.py  streamlit_app.py  streamlit_modal.py  structurer.py  upload_json.py
os/: main.py  pyproject.toml
os/os.egg-info/: PKG-INFO  SOURCES.txt
subprocess/: main.py  pyproject.toml
subprocess/subprocess.egg-info/: PKG-INFO  SOURCES.txt
sys/: main.py  pyproject.toml
sys/sys.egg-info/: PKG-INFO  SOURCES.txt
